canvas: fix scrollbar

--- a/static/resume.css
+++ b/static/resume.css
@@ -185,6 +185,7 @@ div.man-page {
     position: relative;
     padding: 0 0 3rem 0;
     margin: 0;
+    overflow: hidden;
 }
 
 .backgl + .command-block {
